# project_base

./: .clang-format  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  mainpage.md
include/project/: Point.hpp
src/: CMakeLists.txt  Point.cpp
test/: CMakeLists.txt  point_test.cpp
